--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "devrouterk_backend",
   "version": "1.0.0",
   "description": "backend server",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon  server.mjs",
+    "start": "node index.js",
+    "dev": "nodemon  index.js",
     "build": "npm run install-deps && npm run pre-build && npm run post-build",
     "install-deps": "npm install",
     "pre-build": "echo 'Performing pre-build tasks...'",
